--- a/index.html
+++ b/index.html
@@ -105,26 +105,38 @@
 
         <hr>
         
-        <section id="prosection" class="prosection">
-            <h1>My Projects</h1>
-            <div class="projects-container">
-                <div class="project-card">
-                <h2>📝 iNoteBook</h2>
-                <p>A full-stack notes management app with React, Node.js, Express.js, and MongoDB. Features include authentication, CRUD operations, and responsive UI.</p>
-                <a href="https://github.com/aashishyadav05/inotebook" target="_blank" class="btn">View on GitHub</a>
-                </div>
-                <div class="project-card">
-                <h2>🚌 College Bus Tracker</h2>
-                <p>A web-based tracking system using PHP, MySQL, HTML/CSS, and JavaScript. Designed to show real-time location of college buses.</p>
-                <a href="#" target="_blank" class="btn">View on GitHub</a>
-                </div>
-                <div class="project-card">
-                <h2>🌐 Portfolio Website</h2>
-                <p>Personal portfolio website built with HTML, CSS, and JavaScript. Features sections like About, Skills, Projects, and Contact with email integration.</p>
-                <a href="#" target="_blank" class="btn">View Live</a>
-                </div>
+       <section id="prosection" class="prosection">
+        <h1>My Projects</h1>
+        <div class="projects-container">
+
+            <div class="project-card">
+            <h2>🛒 Product App</h2>
+            <p>A web application for managing products with features like adding, deleting, and updating product details. Built with modern frontend and backend technologies.</p>
+            <a href="https://github.com/aashishyadav05/productapp" target="_blank" class="btn">View on GitHub</a>
             </div>
+
+            <div class="project-card">
+            <h2>📧 Smart Contact Manager</h2>
+            <p>A full-featured Spring Boot application for managing contacts with user authentication, form validation, and MySQL integration. Uses Thymeleaf for the frontend.</p>
+            <a href="https://github.com/aashishyadav05/smart-contact-manager" target="_blank" class="btn">View on GitHub</a>
+            </div>
+
+            <div class="project-card">
+            <h2>📝 iNoteBook</h2>
+            <p>A secure note-taking full-stack app using React, Node.js, Express, and MongoDB. Includes login/signup, real-time CRUD operations, and responsive UI.</p>
+            <a href="https://github.com/aashishyadav05/inotebook" target="_blank" class="btn">View on GitHub</a>
+            </div>
+
+            <div class="project-card">
+            <h2>🌐 Portfolio Website</h2>
+            <p>My personal portfolio website built with HTML, CSS, and JavaScript, showcasing my skills, projects, and contact details. Fully responsive and mobile-friendly.</p>
+            <a href="https://aashishyadav05.github.io/portfolio-Aashish/" target="_blank" class="btn">View Live</a>
+            <a href="https://github.com/aashishyadav05/portfolio-Aashish" target="_blank" class="btn">View on GitHub</a>
+            </div>
+
+        </div>
         </section>
+
         
         <hr>
 
@@ -155,7 +167,7 @@
                         <div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i><!--mail--></div>
                         <div class="text">
                             <h3>Email</h3>
-                            <p>aashish.yadavit2021@indoreinstitute.com</p>
+                            <p>aashish.info2025@gmail.com</p>
                         </div>
                     </div>
                     <div class="box">
@@ -194,12 +206,12 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
         function downloadResume() {
-            window.location.href = 'https://drive.google.com/file/d/1dC3KmBo_DvBD8eUkx3VKIbb-0v-uh3Mi/view?usp=drive_link'; // Replace with the actual path to your resume
+            window.location.href = 'https://drive.google.com/file/d/1DMOd2GoCcu8VLZ_HHOwIRbvBrJ7Iqr_j/view?usp=drive_link'; // Replace with the actual path to your resume
         }
     </script>
     <script>
         var typed = new Typed('#element', {
-            strings: ['Web devloper', 'App devloper'],
+            strings: ['Web devloper', 'Java devloper','Software developer'],
             typeSpeed: 50,
         });
     </script>
